--- a/assets/css/darkMode.css
+++ b/assets/css/darkMode.css
@@ -8,16 +8,16 @@
   body,
   html.md-default-theme,
   html {
-    color: rgba(255, 255, 255, 0.87) !important;
+    color: #fff !important;
   }
 
   md-input-container.md-threema-theme .md-input,
   md-input-container.md-threema-theme .md-input::placeholder {
-    color: rgba(255, 255, 255, 0.87) !important;
+    color: #fff !important;
   }
 
   md-dialog.md-threema-theme {
-    color: rgba(255, 255, 255, 0.87) !important;
+    color: #fff !important;
     background-color: #121212 !important;
   }
 
@@ -47,7 +47,7 @@
     .conversation
     .conversation-box
     .receiver-box {
-    color: rgba(255, 255, 255, 0.87) !important;
+    color: #f2f3f5 !important;
   }
   #navigation-conversations
     .conversation-wrapper
@@ -55,7 +55,7 @@
     .conversation-box
     .message-box
     .latest-message {
-    color: rgba(255, 255, 255, 0.6) !important;
+    color: #9ba0a6 !important;
   }
 
   #navigation-conversations .conversation-wrapper .conversation.starred {
@@ -80,37 +80,37 @@
   }
 
   #navigation-conversations .conversation-wrapper {
-    border-bottom: 1px solid #272727 !important;
+    border-bottom: 1px solid #121212 !important;
   }
 
   .material-icons.md-dark {
-    color: rgba(255, 255, 255, 0.87) !important;
+    color: #fff !important;
   }
   .material-icons.md-medium-dark {
-    color: rgba(255, 255, 255, 0.6) !important;
+    color: #fff !important;
   }
   .message-icon img {
     filter: invert(0.8) !important;
   }
 
   #navigation-header .search input[type="search"] {
-    background-color: #121212 !important;
+    background-color: #272727 !important;
     border: 1px solid #323232 !important;
-    color: rgba(255, 255, 255, 0.87) !important;
+    color: #fff !important;
   }
 
   .verification-dots div {
-    background-color: #272727 !important;
+    background-color: #e0e0e0 !important;
   }
   .verification-dots.level2 div:nth-of-type(1),
   .verification-dots.level2 div:nth-of-type(2) {
-    background-color: #ff9800 !important;
+    background-color: #ff9700 !important;
   }
   .verification-dots.level3 div {
-    background-color: #05a63f !important;
+    background-color: #10a65e !important;
   }
   .verification-dots.level1 div:nth-of-type(1) {
-    background-color: #f44336 !important;
+    background-color: #f44236 !important;
   }
 
   #messenger.show-detail #navigation {
@@ -128,7 +128,7 @@
   }
 
   .md-button.md-icon-button.header-back-button md-icon {
-    color: rgba(255, 255, 255, 0.87) !important;
+    color: #fff !important;
   }
   md-icon img {
     filter: invert(0.8) !important;
@@ -156,14 +156,14 @@
   }
 
   #conversation-chat .chat .message-status .message-body {
-    background-color: #ECE7C9 !important;
+    background-color: #ece7c9 !important;
   }
 
   .message-body .message-quote .message-quote-content {
-    border-color: rgba(255, 255, 255, 0.87) !important;
+    border-color: #4cb050 !important;
   }
   .message-body .message-quote .message-name {
-    color: rgba(255, 255, 255, 0.87) !important;
+    color: #a5a5a5 !important;
   }
 
   #conversation {
@@ -172,7 +172,7 @@
   }
   #conversation::before {
     background-image: url("../img/wallpaper_light.png?") !important;
-    opacity: 0.1;
+    opacity: 0.12;
     content: " ";
     display: block;
     position: absolute;
@@ -198,20 +198,20 @@
   }
 
   #conversation #conversation-quote {
-    background-color: #1F1F1F !important;
+    background-color: #1f1f1f !important;
   }
 
   /* menu: */
   md-menu-content.md-threema-theme {
-    background-color: #121212 !important;
+    background-color: #2c2c2c !important;
   }
 
   md-menu-content.md-threema-theme md-menu-item {
-    color: rgba(255, 255, 255, 0.87) !important;
+    color: #fff !important;
   }
 
   md-menu-content.md-threema-theme md-menu-item md-icon {
-    color: rgba(255, 255, 255, 0.6) !important;
+    color: #d0d0d0 !important;
   }
 
   .md-subheader.md-threema-theme {
@@ -219,28 +219,28 @@
   }
 
   .md-button.md-threema-theme.md-primary {
-    color: rgba(255, 255, 255, 0.6) !important;
+    color: #b8b8b8 !important;
   }
 
   md-dialog.md-default-theme,
   md-dialog {
-    color: rgba(255, 255, 255, 0.87) !important;
-    background-color: #121212 !important;
+    color: #e5e5e5 !important;
+    background-color: #353535 !important;
   }
 
   /* profiles: */
   md-card.md-threema-theme {
-    color: rgba(255, 255, 255, 0.87) !important;
+    color: #fff !important;
     background-color: #121212 !important;
   }
 
   #messenger #detail > div.ng-scope {
-    background-color: #272727 !important;
+    background-color: #121212 !important;
   }
 
   .md-button.md-threema-theme.md-raised {
     background-color: #272727 !important;
-    color: rgba(255, 255, 255, 0.87) !important;
+    color: #fff !important;
   }
   .md-button.md-threema-theme.md-warn.md-fab,
   .md-button.md-threema-theme.md-warn.md-raised {
@@ -248,20 +248,20 @@
   }
 
   #detail md-icon.md-threema-theme {
-    color: rgba(255, 255, 255, 0.6) !important;
+    color: #fff !important;
   }
 
   md-autocomplete.md-threema-theme {
-    background: #121212 !important;
+    background: #272727 !important;
   }
   md-autocomplete.md-threema-theme input {
-    color: rgba(255, 255, 255, 0.6) !important;
+    color: #fff !important;
   }
 
   .md-button.md-threema-theme.md-primary.md-fab,
   .md-button.md-threema-theme.md-primary.md-raised {
     color: #000 !important;
-    background-color: rgba(255, 255, 255, 0.87) !important;
+    background-color: #fff !important;
   }
 
   .avatar-area.overview > .avatar-image {
@@ -269,10 +269,10 @@
   }
 
   .md-autocomplete-suggestions-container.md-threema-theme li {
-    color: rgba(255, 255, 255, 0.87) !important;
+    color: #fff !important;
   }
   .md-autocomplete-suggestions-container.md-threema-theme {
-    background: #121212 !important;
+    background: #272727 !important;
   }
 
   md-dialog-content#dialogContent_my-threema-id-dialog
