--- a/assets/css/darkMode.css
+++ b/assets/css/darkMode.css
@@ -42,24 +42,17 @@
     background-color: #272727 !important;
   }
 
-  #navigation-conversations
-    .conversation-wrapper
-    .conversation
-    .conversation-box
-    .receiver-box {
-    color: #f2f3f5 !important;
+  #navigation-conversations .conversation-wrapper .conversation .conversation-box .receiver-box {
+    color: #f5f2f2 !important;
   }
-  #navigation-conversations
-    .conversation-wrapper
-    .conversation
-    .conversation-box
-    .message-box
-    .latest-message {
+
+  #navigation-conversations .conversation-wrapper .conversation .conversation-box .message-box .latest-message {
     color: #9ba0a6 !important;
   }
 
   #navigation-conversations .conversation-wrapper .conversation.starred {
-    border-image: linear-gradient(
+    border-image:
+      linear-gradient(
         to right,
         #ffc107,
         #ffc107 50%,
@@ -68,11 +61,13 @@
       )
       1 100% !important;
   }
+
   #navigation-conversations .conversation-wrapper .conversation.unread {
-    border-image: linear-gradient(
+    border-image:
+      linear-gradient(
         to right,
-        #F44236,
-        #F44236 50%,
+        #f44236,
+        #f44236 50%,
         #121212 50%,
         #121212 100%
       )
@@ -86,9 +81,11 @@
   .material-icons.md-dark {
     color: #fff !important;
   }
+
   .material-icons.md-medium-dark {
     color: #fff !important;
   }
+
   .message-icon img {
     filter: invert(0.8) !important;
   }
@@ -102,13 +99,16 @@
   .verification-dots div {
     background-color: #e0e0e0 !important;
   }
+
   .verification-dots.level2 div:nth-of-type(1),
   .verification-dots.level2 div:nth-of-type(2) {
     background-color: #ff9700 !important;
   }
+
   .verification-dots.level3 div {
     background-color: #10a65e !important;
   }
+
   .verification-dots.level1 div:nth-of-type(1) {
     background-color: #f44236 !important;
   }
@@ -130,6 +130,7 @@
   .md-button.md-icon-button.header-back-button md-icon {
     color: #fff !important;
   }
+
   md-icon img {
     filter: invert(0.8) !important;
   }
@@ -142,6 +143,7 @@
   #conversation-chat .chat .message-in .message-body {
     background-color: #666666 !important;
   }
+
   #conversation-chat .chat .message-in .bubble-triangle::before,
   #conversation-chat .chat .message-in .bubble-triangle::after {
     background-color: #666666 !important;
@@ -150,6 +152,7 @@
   #conversation-chat .chat .message-out .message-body {
     background-color: #303030 !important;
   }
+
   #conversation-chat .chat .message-out .bubble-triangle::before,
   #conversation-chat .chat .message-out .bubble-triangle::after {
     background-color: #303030 !important;
@@ -162,6 +165,7 @@
   .message-body .message-quote .message-quote-content {
     border-color: #4cb050 !important;
   }
+
   .message-body .message-quote .message-name {
     color: #a5a5a5 !important;
   }
@@ -170,6 +174,7 @@
     background-image: none !important;
     background-color: #121212 !important;
   }
+
   #conversation::before {
     background-image: url("../img/wallpaper_light.png?") !important;
     opacity: 0.12;
@@ -185,13 +190,16 @@
   .twemoji-picker {
     background-color: #272727 !important;
   }
+
   .twemoji-picker .tab label {
     border: 1px solid #272727 !important;
     background: #272727 !important;
   }
+
   .twemoji-picker .tab [type="radio"]:checked ~ label {
     background: #121212 !important;
   }
+
   .twemoji-picker .tab .content {
     border: 1px solid #121212 !important;
     background: #121212 !important;
@@ -242,6 +250,7 @@
     background-color: #272727 !important;
     color: #fff !important;
   }
+
   .md-button.md-threema-theme.md-warn.md-fab,
   .md-button.md-threema-theme.md-warn.md-raised {
     background-color: rgb(255, 87, 34) !important;
@@ -254,6 +263,7 @@
   md-autocomplete.md-threema-theme {
     background: #272727 !important;
   }
+
   md-autocomplete.md-threema-theme input {
     color: #fff !important;
   }
@@ -271,6 +281,7 @@
   .md-autocomplete-suggestions-container.md-threema-theme li {
     color: #fff !important;
   }
+
   .md-autocomplete-suggestions-container.md-threema-theme {
     background: #272727 !important;
   }
