--- a/assets/css/darkMode.css
+++ b/assets/css/darkMode.css
@@ -213,6 +213,14 @@
     color: #d0d0d0 !important;
   }
 
+  .material-icons.md-dark.user-ack, .material-icons.md-medium-dark.user-ack {
+    color: #4cb050 !important;
+  }
+
+  .material-icons.md-dark.user-dec, .material-icons.md-medium-dark.user-dec {
+    color: #ff9700 !important;
+  }
+
   /* menu: */
   md-menu-content.md-threema-theme {
     background-color: #2c2c2c !important;
