--- a/assets/css/darkMode.css
+++ b/assets/css/darkMode.css
@@ -1,63 +1,91 @@
 @media (prefers-color-scheme: dark) {
+  :root {
+    --colorwhite: #fff;
+    --colorblack: #000;
+    --color12: #121212;
+    --color27: #272727;
+    --color32: #323232;
+    --color30: #303030;
+    --color6: #666;
+    --colorffc107: #ffc107;
+    --color9ba0a6: #9ba0a6;
+    --colorf5f2: #f5f2f2;
+    --colorf44236: #f44236;
+    --color10a65e: #10a65e;
+    --colorff9700: #ff9700;
+    --colore0: #e0e0e0;
+    --colora5: #a5a5a5;
+    --colord0: #d0d0d0;
+    --color1f: #1f1f1f;
+    --color35: #353535;
+    --colorb8: #b8b8b8;
+    --colore5: #e5e5e5;
+    --color93: #939393;
+    --color2c: #2c2c2c;
+    --color4cb050: #4cb050;
+    --colorece7c9: #ece7c9;
+    --colorff5722: #ff5722;
+  }
+
   /* login: */
   #main {
-    background-color: #121212 !important;
+    background-color: var(--color12) !important;
   }
 
   body.md-default-theme,
   body,
   html.md-default-theme,
   html {
-    color: #fff !important;
+    color: var(--colorwhite) !important;
   }
 
   md-input-container.md-threema-theme .md-input,
   md-input-container.md-threema-theme .md-input::placeholder {
-    color: #fff !important;
+    color: var(--colorwhite) !important;
   }
 
   md-dialog.md-threema-theme {
-    color: #fff !important;
-    background-color: #121212 !important;
+    color: var(--colorwhite) !important;
+    background-color: var(--color12) !important;
   }
 
   /* chat selection list: */
   #navigation-header {
-    background-color: #272727 !important;
+    background-color: var(--color27) !important;
   }
 
   #navigation-conversations {
-    background-color: #121212 !important;
+    background-color: var(--color12) !important;
   }
 
   #navigation-conversations .conversation-wrapper .conversation,
   #navigation-contacts .contact {
-    border-left: 8px solid #121212 !important;
+    border-left: 8px solid var(--color12) !important;
   }
 
   #navigation-conversations .conversation-wrapper .conversation.active,
   #navigation-conversations .conversation-wrapper .conversation:hover,
   #navigation-contacts .contact:hover {
-    border-color: #272727 !important;
-    background-color: #272727 !important;
+    border-color: var(--color27) !important;
+    background-color: var(--color27) !important;
   }
 
   #navigation-conversations .conversation-wrapper .conversation .conversation-box .receiver-box {
-    color: #f5f2f2 !important;
+    color: var(--colorf5f2) !important;
   }
 
   #navigation-conversations .conversation-wrapper .conversation .conversation-box .message-box .latest-message {
-    color: #9ba0a6 !important;
+    color: var(--color9ba0a6) !important;
   }
 
   #navigation-conversations .conversation-wrapper .conversation.starred {
     border-image:
       linear-gradient(
         to right,
-        #ffc107,
-        #ffc107 50%,
-        #121212 50%,
-        #121212 100%
+        var(--colorffc107),
+        var(--colorffc107) 50%,
+        var(--color12) 50%,
+        var(--color12) 100%
       )
       1 100% !important;
   }
@@ -66,24 +94,24 @@
     border-image:
       linear-gradient(
         to right,
-        #f44236,
-        #f44236 50%,
-        #121212 50%,
-        #121212 100%
+        var(--colorf44236),
+        var(--colorf44236) 50%,
+        var(--color12) 50%,
+        var(--color12) 100%
       )
       1 100% !important;
   }
 
   #navigation-conversations .conversation-wrapper {
-    border-bottom: 1px solid #121212 !important;
+    border-bottom: 1px solid var(--color12) !important;
   }
 
   .material-icons.md-dark {
-    color: #fff !important;
+    color: var(--colorwhite) !important;
   }
 
   .material-icons.md-medium-dark {
-    color: #fff !important;
+    color: var(--colorwhite) !important;
   }
 
   .message-icon img {
@@ -91,44 +119,44 @@
   }
 
   #navigation-header .search input[type="search"] {
-    background-color: #272727 !important;
-    border: 1px solid #323232 !important;
-    color: #fff !important;
+    background-color: var(--color27) !important;
+    border: 1px solid var(--color32) !important;
+    color: var(--colorwhite) !important;
   }
 
   .verification-dots div {
-    background-color: #e0e0e0 !important;
+    background-color: var(--colore0) !important;
   }
 
   .verification-dots.level3 div {
-    background-color: #10a65e !important;
+    background-color: var(--color10a65e) !important;
   }
 
   .verification-dots.level2 div:nth-of-type(1),
   .verification-dots.level2 div:nth-of-type(2) {
-    background-color: #ff9700 !important;
+    background-color: var(--colorff9700) !important;
   }
 
   .verification-dots.level1 div:nth-of-type(1) {
-    background-color: #f44236 !important;
+    background-color: var(--colorf44236) !important;
   }
 
   #messenger.show-detail #navigation {
-    border-right: 1px solid #323232 !important;
+    border-right: 1px solid var(--color32) !important;
   }
 
   /* chat history: */
   #messenger #detail > div.ng-scope .detail-header {
-    background-color: #272727 !important;
+    background-color: var(--color27) !important;
   }
 
   compose-area > div:first-child > div:nth-of-type(2) {
-    background-color: #272727 !important;
-    border: 1px solid #323232 !important;
+    background-color: var(--color27) !important;
+    border: 1px solid var(--color32) !important;
   }
 
   .md-button.md-icon-button.header-back-button md-icon {
-    color: #fff !important;
+    color: var(--colorwhite) !important;
   }
 
   md-icon img {
@@ -136,163 +164,163 @@
   }
 
   #conversation #conversation-footer {
-    background-color: #121212 !important;
+    background-color: var(--color12) !important;
   }
 
   #conversation-chat .chat .message-in .message-body {
-    background-color: #666 !important;
+    background-color: var(--color6) !important;
   }
 
   #conversation-chat .chat .message-in .bubble-triangle::before,
   #conversation-chat .chat .message-in .bubble-triangle::after {
-    background-color: #666 !important;
+    background-color: var(--color6) !important;
   }
 
   #conversation-chat .chat .message-out .message-body {
-    background-color: #303030 !important;
+    background-color: var(--color30) !important;
   }
 
   #conversation-chat .chat .message-out .bubble-triangle::before,
   #conversation-chat .chat .message-out .bubble-triangle::after {
-    background-color: #303030 !important;
+    background-color: var(--color30) !important;
   }
 
   #conversation-chat .chat .message-status .message-body {
-    background-color: #ece7c9 !important;
+    background-color: var(--colorece7c9) !important;
   }
 
   .message-body .message-quote .message-quote-content {
-    border-color: #4cb050 !important;
+    border-color: var(--color4cb050) !important;
   }
 
   .message-body .message-quote .message-name {
-    color: #a5a5a5 !important;
+    color: var(--colora5) !important;
   }
 
   #conversation {
     background-image: none !important;
-    background-color: #121212 !important;
+    background-color: var(--color12) !important;
   }
 
   .twemoji-picker {
-    background-color: #272727 !important;
+    background-color: var(--color27) !important;
   }
 
   .twemoji-picker .tab label {
-    border: 1px solid #272727 !important;
-    background: #272727 !important;
+    border: 1px solid var(--color27) !important;
+    background: var(--color27) !important;
   }
 
   .twemoji-picker .tab [type="radio"]:checked ~ label {
-    background: #121212 !important;
+    background: var(--color12) !important;
   }
 
   .twemoji-picker .tab .content {
-    border: 1px solid #121212 !important;
-    background: #121212 !important;
+    border: 1px solid var(--color12) !important;
+    background: var(--color12) !important;
   }
 
   #conversation #conversation-quote {
-    background-color: #1f1f1f !important;
+    background-color: var(--color1f) !important;
   }
 
   #conversation-chat .chat .message-body .message-info {
-    color: #d0d0d0 !important;
+    color: var(--colord0) !important;
   }
 
   .material-icons.md-dark.user-ack,
   .material-icons.md-medium-dark.user-ack {
-    color: #4cb050 !important;
+    color: var(--color4cb050) !important;
   }
 
   .material-icons.md-dark.user-dec,
   .material-icons.md-medium-dark.user-dec {
-    color: #ff9700 !important;
+    color: var(--colorff9700) !important;
   }
 
   compose-area > div:first-child > div:nth-of-type(2) div.compose:empty::before {
-    color: #939393 !important;
+    color: var(--color93) !important;
   }
 
   /* menu: */
   md-menu-content.md-threema-theme {
-    background-color: #2c2c2c !important;
+    background-color: var(--color2c) !important;
   }
 
   md-menu-content.md-threema-theme md-menu-item {
-    color: #fff !important;
+    color: var(--colorwhite) !important;
   }
 
   md-menu-content.md-threema-theme md-menu-item md-icon {
-    color: #d0d0d0 !important;
+    color: var(--colord0) !important;
   }
 
   .md-subheader.md-threema-theme {
-    background-color: #272727 !important;
+    background-color: var(--color27) !important;
   }
 
   .md-button.md-threema-theme.md-primary {
-    color: #b8b8b8 !important;
+    color: var(--colorb8) !important;
   }
 
   md-dialog.md-default-theme,
   md-dialog {
-    color: #e5e5e5 !important;
-    background-color: #353535 !important;
+    color: var(--colore5) !important;
+    background-color: var(--color35) !important;
   }
 
   /* profiles: */
   md-card.md-threema-theme {
-    color: #fff !important;
-    background-color: #121212 !important;
+    color: var(--colorwhite) !important;
+    background-color: var(--color12) !important;
   }
 
   #messenger #detail > div.ng-scope {
-    background-color: #272727 !important;
+    background-color: var(--color27) !important;
   }
 
   .md-button.md-threema-theme.md-raised {
-    background-color: #272727 !important;
-    color: #fff !important;
+    background-color: var(--color27) !important;
+    color: var(--colorwhite) !important;
   }
 
   .md-button.md-threema-theme.md-warn.md-fab,
   .md-button.md-threema-theme.md-warn.md-raised {
-    background-color: rgb(255, 87, 34) !important;
+    background-color: var(--colorff5722) !important;
   }
 
   #detail md-icon.md-threema-theme {
-    color: #fff !important;
+    color: var(--colorwhite) !important;
   }
 
   md-autocomplete.md-threema-theme {
-    background: #272727 !important;
+    background: var(--color27) !important;
   }
 
   md-autocomplete.md-threema-theme input {
-    color: #fff !important;
+    color: var(--colorwhite) !important;
   }
 
   .md-button.md-threema-theme.md-primary.md-fab,
   .md-button.md-threema-theme.md-primary.md-raised {
-    color: #000 !important;
-    background-color: #fff !important;
+    color: var(--colorblack) !important;
+    background-color: var(--colorwhite) !important;
   }
 
   .avatar-area.overview > .avatar-image {
-    background-color: #323232 !important;
+    background-color: var(--color32) !important;
   }
 
   .md-autocomplete-suggestions-container.md-threema-theme li {
-    color: #fff !important;
+    color: var(--colorwhite) !important;
   }
 
   .md-autocomplete-suggestions-container.md-threema-theme {
-    background: #272727 !important;
+    background: var(--color27) !important;
   }
 
   md-dialog-content#dialogContent_my-threema-id-dialog > div.md-dialog-content.center {
-    background-color: #fff !important;
+    background-color: var(--colorwhite) !important;
   }
 
   md-icon > img[alt="QR"] {
